# forum

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
config/: .env.template
docker/django/: start_remote_web.sh  start_socket_web.sh
docker/nginx/: nginx.conf  nginx.dev.instance.conf
src/: urls.py
src/common/decorators/: view_decorators.py
src/common/exceptions/: domain_exceptions.py  error_serializer.py  exception_handler.py
src/common/permissions/: permissions.py
src/forum/: admin.py  api_urls.py  apps.py  urls.py
src/forum/api_views/comment/: views.py
src/forum/api_views/section/: serializers.py  views.py
src/forum/api_views/topic/: serializers.py  views.py
src/forum/dto/: comment.py  section.py  topic.py
src/forum/forms/: comment.py  topic.py
src/forum/migrations/: 0001_initial.py  0002_alter_section_parent.py  0002_delete_account.py
src/forum/models/: __init__.py  account.py  comment.py  section.py  topic.py
src/forum/services/: section.py  topic.py
src/forum/views/comment/: serializers.py  views.py
src/forum/views/section/: serializers.py  views.py
src/forum/views/topic/: serializers.py  (+1 more)
src/settings/: __init__.py  settings.py
src/templates/: create_topic.html  index.html  section.html  topic.html
src/templates/registration/: login.html  registration.html
src/users/: admin.py  api_urls.py  urls.py
src/users/form/: user.py
src/users/migrations/: 0001_initial.py  0002_account.py
src/users/models/: account.py
src/users/services/: account.py  auth.py
(+17 files in other folders)
